--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,62 @@
     <meta charset="utf-8" />
     <title>Exercice hebdomadaire 8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="basket">
+      <div class="product">
+        <img src="./imgs/brocoli.png" />
+        <div class="product-info">
+          <div class="product-description">
+            <p class="product-title">Brocoli</p>
+            <p class="product-in-stock">en stock</p>
+          </div>
+          <p class="price">CHF 4.35</p>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="./imgs/gruyere.png" />
+        <div class="product-info">
+          <div class="product-description">
+            <p class="product-title">le Gruyère</p>
+            <p class="product-in-stock">en stock</p>
+          </div>
+          <p class="price">CHF 11.00</p>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="./imgs/carottes.png" />
+        <div class="product-info">
+          <div class="product-description">
+            <p class="product-title">Carottes mini</p>
+            <p class="product-in-stock">plus que 1 en stock</p>
+          </div>
+          <p class="price">CHF 5.20</p>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="./imgs/chipspaprika.png" />
+        <div class="product-info">
+          <div class="product-description">
+            <p class="product-title">Chips paprika Zweifel</p>
+            <p class="product-in-stock">en stock</p>
+          </div>
+          <p class="price">CHF 5.95</p>
+        </div>
+      </div>
+
+      <a class="button">Passer à la caisse</a>
+    </div>
 
     <script src="js/main.js" type="module"></script>
   </body>
