faute de frappe

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
         <img src="./imgs/gruyere.png" />
         <div class="product-info">
           <div class="product-description">
-            <p class="product-title">le Gruyère</p>
+            <p class="product-title">Le Gruyère</p>
             <p class="product-in-stock">en stock</p>
           </div>
           <p class="price">CHF 11.00</p>
